--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,14 +8,17 @@
     tools:context="com.app.lucasgiuri.profinder2.MainActivity">
 
 
-    <Button
+    <!--<Button
+        android:id="@+id/logout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:text="logout"/>
-
+        android:text="logout"
+        android:onClick="logout"/>
+-->
     <TextView
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!"
@@ -23,5 +26,24 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/mapa"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="56dp"
+        android:layout_marginEnd="172dp"
+        android:layout_marginLeft="124dp"
+        android:layout_marginRight="172dp"
+        android:layout_marginStart="124dp"
+        android:layout_marginTop="143dp"
+        android:text="Mapa"
+        app:layout_constraintBottom_toTopOf="@+id/textView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        />
+        <!--android:onClick="changeToMap"-->
+
 
 </android.support.constraint.ConstraintLayout>
