--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,14 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_height="match_parent"
     tools:context=".LoginActivity">
 
     <com.facebook.login.widget.LoginButton
-    android:id="@+id/loginButton"
-    android:layout_gravity="center_vertical|center_horizontal"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_centerInParent="true" />
+        android:id="@+id/loginButton"
+        android:layout_width="195dp"
+        android:layout_height="200dp"
+        tools:layout_editor_absoluteX="95dp"
+        tools:layout_editor_absoluteY="212dp" />
 
 </android.support.constraint.ConstraintLayout>
