--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,13 +7,32 @@
     android:background="@color/colorPrimary"
     tools:context=".LoginActivity">
 
+
+    <RelativeLayout
+        android:layout_width="380dp"
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="383dp">
+
+        <ImageView
+            android:layout_width="291dp"
+            android:layout_height="347dp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="28dp"
+            android:src="@drawable/logo_small" />
+
+    </RelativeLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:orientation="vertical"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="174dp">
+        tools:layout_editor_absoluteX="80dp"
+        tools:layout_editor_absoluteY="424dp">
 
         <com.facebook.login.widget.LoginButton
             android:id="@+id/loginButton"
@@ -22,12 +41,12 @@
             android:layout_centerHorizontal="true"
             android:background="@drawable/rectangle_rounded_corners_white"
             android:padding="@dimen/Margin_5"
-            android:paddingTop="20dp"
+            android:paddingBottom="30dp"
             android:text="Login con Facebook"
             android:textColor="@android:color/black"
             android:textSize="@dimen/LetterSize_Medium" />
 
-       <!-- <Button
+        <!-- <Button
             android:id="@+id/LoginActivity"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
